Include a modified repl-ln
There were still problems with \ef and \eb. The solution is a modified
repl-ln, which sees \newline as whitespace and acts on ASCII nul as
\newline.

* gorilla/repl-ln.clj: new file

--- a/build.xml
+++ b/build.xml
@@ -27,6 +27,7 @@
 				<pathelement location="${clojure-contrib.jar}"/>
 			</classpath>
 			<sysproperty key="clojure.compile.path" value="${build}"/>
+			<arg value="de.kotka.gorilla.repl-ln"/>
 			<arg value="de.kotka.gorilla"/>
 		</java>
 	</target>
