--- a/build.xml
+++ b/build.xml
@@ -28,8 +28,9 @@
 			</classpath>
 			<sysproperty key="clojure.compile.path" value="${build}"/>
 			<arg value="de.kotka.gorilla"/>
-			<arg value="de.kotka.gorilla.DocLookup"/>
-			<arg value="de.kotka.gorilla.NamespaceInfo"/>
+			<arg value="de.kotka.gorilla.util"/>
+			<arg value="de.kotka.gorilla.backend"/>
+			<arg value="de.kotka.gorilla.nails"/>
 		</java>
 	</target>
 
