Big Repl wrap-up
Reworked Repl completely. Moved the Repl code into it's
on namespace. Repl buffer has it's own filetype to prevent
keybindings from triggering. Repl Nails consolidated into
one Repl Nail.

--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,7 @@
 			<sysproperty key="clojure.compile.path" value="${build}"/>
 			<arg value="de.kotka.gorilla"/>
 			<arg value="de.kotka.gorilla.util"/>
+			<arg value="de.kotka.gorilla.repl"/>
 			<arg value="de.kotka.gorilla.backend"/>
 			<arg value="de.kotka.gorilla.nails"/>
 		</java>
