Add runNailgun target

--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,22 @@ task installVim << {
         installFiles it, '**/*.txt', subDir
     }
 }
+
+task runNailgun(dependsOn: classes) << {
+    Map args = [
+        classname:    'com.martiansoftware.nailgun.NGServer',
+        failOnError:  true,
+        fork:         true,
+        classpathref: 'nailgun.classpath'
+    ]
+
+    ant.path(id: 'nailgun.classpath') {
+        sourceSets.main.clojure.srcDirs.each { pathelement location: it }
+
+        pathelement location: sourceSets.main.classesDir.path
+
+        configurations.clojure.each { pathelement location: it }
+    }
+
+    ant.java(args) { arg value: '127.0.0.1' }
+}
