--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,6 @@ task runNailgun(type: JavaExec.class, dependsOn: classes) {
         sourceSets.main.classesDir.path,
         configurations.clojure
     ])
-    main = 'com.martiansoftware.nailgun.NGServer'
+    main = 'vimclojure.nailgun.NGServer'
     args = [ '127.0.0.1' ]
 }
