Add clojarsDeploy to server subproject

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ project(':server') {
         development 'org.clojure:clojure:1.1.0'
     }
 
+    uploadArchives {
+        clojarsDeploy()
+    }
+
     compileClojure.dependsOn compileJava
 }
 
