--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ subprojects {
     apply plugin: 'java-base'
 
     group = 'vimclojure'
-    version = '2.2.0-SNAPSHOT'
+    version = '2.2.0'
 
     defaultTasks 'build'
 }
