--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ subprojects {
     apply plugin: 'java-base'
 
     group = 'vimclojure'
-    version = '2.3.0-SNAPSHOT'
+    version = '2.3.0-nrepl-SNAPSHOT'
 
     defaultTasks 'build'
 }
@@ -12,10 +12,12 @@ project(':server') {
 
     repositories {
         clojureReleasesRepo()
+        clojarsRepo()
     }
 
     dependencies {
-        development 'org.clojure:clojure:1.2.0'
+        development 'org.clojure:clojure:1.2.+'
+        development 'org.clojars.kotarak:nrepl:0.0.2-SNAPSHOT'
     }
 
     uploadArchives {
@@ -117,12 +119,12 @@ task genCompletions(type: JavaExec.class) {
     ]
 }
 
-task runNailgun(type: JavaExec.class, dependsOn: project(':server').classes) {
+task runRepl(type: JavaExec.class, dependsOn: project(':server').classes) {
     classpath = project.files(
         project(':server').sourceSets.main.clojure.sourceDir,
         project(':server').sourceSets.main.classesDir,
         project(':server').sourceSets.main.compileClasspath
     )
-    main = 'vimclojure.nailgun.NGServer'
-    args = [ '127.0.0.1' ]
+    main = 'clojure.tools.nrepl.main'
+    args = [ "--port", "2187" ]
 }
