Adapt build to clojuresque 1.4.0, depend on clojure 1.+

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,12 @@ subprojects {
     defaultTasks 'build'
 }
 
+apply plugin: 'clojure'
+
+repositories {
+    clojarsRepo()
+}
+
 project(':server') {
     apply plugin: 'clojure'
 
@@ -15,7 +21,7 @@ project(':server') {
     }
 
     dependencies {
-        development 'org.clojure:clojure:1.2.0'
+        compile 'org.clojure:clojure:1.+'
     }
 
     uploadArchives {
@@ -91,35 +97,40 @@ project(':vim') {
     }
 }
 
-task genCompletions(type: JavaExec.class) {
+task genCompletions(type: clojuresque.ClojureExec) {
     classpath = project.files(
-        project(':server').sourceSets.main.clojure.sourceDir,
+        project(':server').sourceSets.main.clojure.srcDirs,
         project(':server').sourceSets.main.classesDir,
         project(':server').sourceSets.main.compileClasspath
     )
-    main = "clojure.main"
-    args = [ "-e", "(require 'vimclojure.gencompletions)", "-e",
-        "(vimclojure.gencompletions/main " +
-            "'clojure.core " +
-            "'clojure.inspector " +
-            "'clojure.java.browse 'clojure.java.browse-ui 'clojure.java.io 'clojure.java.javadoc 'clojure.java.shell " +
-            "'clojure.main " +
-            "'clojure.pprint " +
-            "'clojure.repl " +
-            "'clojure.set " +
-            "'clojure.stacktrace " +
-            "'clojure.string " +
-            "'clojure.template " +
-            "'clojure.test 'clojure.test.tap 'clojure.test.junit " +
-            "'clojure.walk " +
-            "'clojure.xml " +
-            "'clojure.zip)"
+    main = "vimclojure.gencompletions/main"
+    args = [
+        "clojure.core",
+        "clojure.inspector",
+        "clojure.java.browse",
+        "clojure.java.browse-ui",
+        "clojure.java.io",
+        "clojure.java.javadoc",
+        "clojure.java.shell",
+        "clojure.main",
+        "clojure.pprint",
+        "clojure.repl",
+        "clojure.set",
+        "clojure.stacktrace",
+        "clojure.string",
+        "clojure.template",
+        "clojure.test",
+        "clojure.test.tap",
+        "clojure.test.junit",
+        "clojure.walk",
+        "clojure.xml",
+        "clojure.zip"
     ]
 }
 
-task runNailgun(type: JavaExec.class, dependsOn: project(':server').classes) {
+task runNailgun(type: JavaExec, dependsOn: project(':server').classes) {
     classpath = project.files(
-        project(':server').sourceSets.main.clojure.sourceDir,
+        project(':server').sourceSets.main.clojure.srcDirs,
         project(':server').sourceSets.main.classesDir,
         project(':server').sourceSets.main.compileClasspath
     )
